k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      containers:
        - name: jasmc-backend-container
          image: jasmc-backend-image:latest
          imagePullPolicy: IfNotPresent
          command: ["/bin/sh", "-c"]
          args:
            - |
              python manage.py migrate &&
              python manage.py populate_posts &&
              python manage.py runserver 0.0.0.0:8000
          ports:
            - containerPort: 8000
