k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  type: ClusterIP
  ports:
    - port: 5432
      name: postgres
  clusterIP: None
  selector:
    app: postgres-app
